# llm-gemini-code-assist

./: .cz.toml  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_PLAN.md  README.md  TODO.md  llm_gemini.py  llm_gemini_code_assist.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: profile_request.py
tests/: asserts.py  conftest.py  test_basic_oauth.py  test_gemini.py  test_llm_gemini_code_assist.py
tests/cassettes/test_gemini/: test_cli_gemini_files_with_oauth.yaml
tests/cassettes/test_gemini_code_assist/: test_prompt_async.yaml  test_prompt_sync.yaml  test_tools.yaml
tests/cassettes/test_llm_gemini_code_assist/: test_prompt_async.yaml  test_prompt_sync.yaml  test_prompt_with_pydantic_schema.yaml  test_tools.yaml
